# ds-agent-research-loop

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  START_HERE.md  alembic.ini  data_gen.py  docker-build.sh  docker-compose.yml  history.py  llm.py  main.py  pyproject.toml  train.py
.claude/: settings.local.json
.devcontainer/: devcontainer-lock.json  devcontainer.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_benchmark_members_and_splits.py  0003_compaction_cadence.py
entrypoint/: config.py  run.py  smoke_live.py
notes/: 000-spec-list.md  002-progress.html  002-start-here.md  006-start-here.md  DATAGEN.md  DEMO.md  OPERATING.md  ablation_results.html  datagen_stats.md  flow.md  llm-autods-toy-spec.md  progress.html  xxx-postgres-addition.md
notes/html/: agent-experiment-loop.html
notes/research/: technical-guideline-high-level.md
scripts/: demo.sh  grow_dataset.py
specs/001-autods-loop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-live-tests-containerize/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-memory-compaction-ablation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-benchmark-harness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-memory-regime-abstraction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-compaction-operator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/ds_agent_loop/: __init__.py  analysis.py  benchmark.py  compaction.py  data_gen.py  llm.py  (+8 more)
tests/: test_analysis.py  test_benchmark.py  test_benchmark_persistence.py  test_compaction.py  test_data_gen.py  test_experiment.py  test_history.py  test_llm.py  test_loop.py  test_memory.py  test_provenance.py  test_store.py  test_store_integration.py  test_train.py
(+27 files in other folders)
