[project]
name = "ds-agent-loop"
version = "0.1.0"
description = "LLM Autonomous Data Scientist (Toy) Loop"
readme = "README.md"
authors = [
    { name = "Rudolf Luttich", email = "rudolf@spatialedge.ai" }
]
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "google-genai>=1.0",
    "google-adk>=1.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[project.scripts]
ds-agent-loop = "ds_agent_loop.main:main"
ds-agent-memory = "ds_agent_loop.provenance:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
